<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="minvu.uw.tacoma.edu.mockup.Fragment.SignInFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noteApplication"
            android:textSize="35dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/EditTextInput"
                android:hint="@string/email"
                android:id="@+id/textViewEmail"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                style="@style/EditTextInput"
                android:hint="@string/password"
                android:id="@+id/textViewPassword"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/ButtonMainPage"
            android:text="@string/signInButton"
            android:id="@+id/signInButton"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="or"
            android:gravity="center"/>

        <Button
            style="@style/ButtonMainPage"
            android:text="@string/signUpButton"/>

    </LinearLayout>

</FrameLayout>
